--- a/events.html
+++ b/events.html
@@ -133,7 +133,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/4.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Voice">Voice</span></h3>
-                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Sync</span></h4>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Unplugged</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-5">
@@ -285,7 +285,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/1.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
-                <h4 class="box__text"><span class="box__text-inner">Group Dance</span></h4>
+                <h4 class="box__text"><span class="box__text-inner">Sync</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -293,8 +293,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/2.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Music">Music</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Battle Of Bands</span></h4>
+                <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Music">Tik-TOK</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Get Musically</span></h4>
                 <div class="box__deco box__deco--top">&#10032;</div>
             </div>
             <p class="overlay__content">Details</p>
@@ -304,7 +304,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/3.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Style">Style</span></h3>
-                <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Parade</span></h4>
+                <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Shuffle</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -312,8 +312,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/4.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
-                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Duet Singing</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Voice">Voice</span></h3>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Unplugged</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -322,7 +322,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/5.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Treasure">Treasure</span></h3>
-                <h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Treasure Hunt</span></h4>
+                <h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Lootere</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -330,8 +330,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/6.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
-                <h4 class="box__text"><span class="box__text-inner">DUET DANCE</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Strength">Strength</span></h3>
+                <h4 class="box__text"><span class="box__text-inner">IRON FIST</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -340,7 +340,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/7.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Debate">Debate</span></h3>
-                <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">Debate</span></h4>
+                <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">Flip Flop</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -348,8 +348,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/8.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Solo">Solo</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Solo Singing</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Colour">Colour</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Rangoli</span></h4>
                 <div class="box__deco">&#10108;</div>
             </div>
             <p class="overlay__content">Details</p>
@@ -358,8 +358,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/9.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Esports">Esports</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Gaming</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Idols">Idols</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Mr. & Ms. Emblazon</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -368,7 +368,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/10.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Alfaaz</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -376,8 +376,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/11.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Rap">Rap</span></h3>
-                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Rapping</span></h4>
+                <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Idols">Idols</span></h3>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Lip SYnc Battle</span></h4>
                 <div class="box__deco box__deco--top">&#10153;</div>
             </div>
             <p class="overlay__content">Details</p>
@@ -396,7 +396,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/13.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Quiz">Quiz</span></h3>
-                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Entertainment Quiz</span></h4>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Headrush Quiz</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -422,8 +422,8 @@
             <div class="box">
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/16.jpg" alt="Some image"/>
-                <h3 class="box__title"><span class="box__title-inner" data-hover="Fun">Fun</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Musical Chairs</span></h4>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Esports">Esports</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Blue Zone</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -432,7 +432,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/17.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-MAD Show</span></h4>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-Maniac</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -441,7 +441,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/18.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="60sec">60sec</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Minute to Win it</span></h4>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Hour Glass</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
@@ -459,7 +459,7 @@
                 <div class="box__shadow"></div>
                 <img class="box__img box__img--original" src="images/20.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Art">Art</span></h3>
-                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tattoo Making</span></h4>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Shoe muse</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
