--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
 				<div class="menu__item-inner">
 
 					<p class="label label--topleft label--line">Be a Part now</p>
-					<a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
-					<a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
+					<a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
+					<a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
 				</div>
 
 
