--- a/schedule2.html
+++ b/schedule2.html
@@ -67,8 +67,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
-            <a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
+            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
+            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
@@ -85,9 +85,11 @@
     <button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
 </nav>
 <main>
+
     <div class="content">
+         <h1 style=" margin-bottom: -1em;text-align: center; font-size: 4em; font-weight: bold;">Day 2 Schedule</h1>
         <!-- Pieces Slider -->
-        <div class="pieces-slider">
+        <div class="pieces-slider" style="margin-top: -20px;">
             <!-- Each slide with corresponding image and text -->
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/1.jpg" alt="">
