Added events name

--- a/schedule2.html
+++ b/schedule2.html
@@ -93,23 +93,59 @@
             <!-- Each slide with corresponding image and text -->
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/1.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 1</h2>
+                <h2 class="pieces-slider__text">Kalakaari</h2>
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/2.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 2</h2>
+                <h2 class="pieces-slider__text">One Act Play</h2>
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/3.jpg" alt="">
-                <h2 class="pieces-slider__text">Event3</h2>
+                <h2 class="pieces-slider__text">Mr. and Ms. Emblazon</h2>
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/4.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 4</h2>
+                <h2 class="pieces-slider__text">Hour Glass</h2>
             </div>
             <div class="pieces-slider__slide">
                 <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 5</h2>
+                <h2 class="pieces-slider__text">Street Play</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Group Dance</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Tambola</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Head Rush</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Prize Distribution</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Selfie Contest</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Talking Chameleon</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Lip-Sync Battle</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Star Night</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/5.jpg" alt="">
+                <h2 class="pieces-slider__text">Jam Session</h2>
             </div>
             <!-- Canvas to draw the pieces -->
             <canvas class="pieces-slider__canvas"></canvas>
